# control_de_interfaces

./: INTRODUCCION.md  README.md
Act_0/: README.md
Act_1/: README.md
Act_1/Act_1/: Act_1.c  CMakeLists.txt
Act_2/: README.md
actividades/: README.md
actividades/actividad_1/: CMakeLists.txt  Makefile  README.md  platformio.ini
actividades/actividad_2/src/: main.c
actividades/actividad_3/: platformio.ini
actividades/actividad_3/src/: main.c
actividades/actividad_4/: README.md
actividades/actividad_4/src/: main.c
legacy/actividad_1/src/: main.c
legacy/actividad_2/: README.md
legacy/actividad_3/: README.md
robots_sumo/: README.md
robots_sumo/bitacoras/: README.md  plantilla_Bitacora.docx  plantilla_bitacoras.md
robots_sumo/documentacion/: README.md
robots_sumo/estructura/: README.md
robots_sumo/firmware/: README.md
